src/objects/Broker__c.object
<CustomObject>
    <description>Archived system function</description>
    <fields>
        <fullName>Escrow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escrow</label>
        <referenceTo>Escrow__c</referenceTo>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>Lease__c</referenceTo>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipName>Brokers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Leasing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Leasing</label>
        <referenceTo>Project_Leasing__c</referenceTo>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sale</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipName>Brokers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>system.broker</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Broker&apos;s ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>system.brokers</pluralLabel>
    <recordTypes>
        <fullName>External_Broker</fullName>
        <active>false</active>
        <label>External Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Broker</fullName>
        <active>true</active>
        <label>Internal Broker</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>